@@ -1,3 +1,8 @@
+2009-07-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* WebServices.cs: Add a convenience ExecuteSchedulerAsync
+	method.
+
 2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* Utilities.cs: Added, moved some methods from the
